<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etNewUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_user_hint"
        android:inputType="text" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="161dp"
        app:passwordToggleEnabled="true">

        <Button
            android:id="@+id/btnNewSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_sign_up" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_pw_hint"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>