<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_hint"
        android:ems="10"
        android:inputType="text"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="161dp"
        app:passwordToggleEnabled="true">

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/remember_me" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pw_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:drawableTop="@drawable/ic_add_black_24dp"
        android:text="Sign Up!" />


</LinearLayout>